--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -9,7 +11,16 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+    <Navigation/>
+	<body class='chbi-portfolio-body'>
+		<h1 class='text-xs'>Astro</h1>
 	</body>
+  <Footer/>
 </html>
+
+<style>
+  .chbi-portfolio-body {
+    background-color: #00CFFF;
+    color: black;
+  }
+</style>
