about-section completed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import About from '../components/About.astro';
 ---
 
 <html lang="en">
@@ -13,7 +14,7 @@ import Footer from '../components/Footer.astro';
 	</head>
     <Navigation/>
 	<body class='chbi-portfolio-body'>
-		<h1 class='text-xs'>Astro</h1>
+    <About/>
 	</body>
   <Footer/>
 </html>
