finishing up the button/about section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,8 +1,8 @@
 ---
-import Counter from './button';
+import Button from './button';
 const viewProjectText ='View Projects';
 const resumeText = 'resumeText';
-
+console.log(viewProjectText);
 ---
 
 <section class='chbi-about-section'>
@@ -15,7 +15,7 @@ const resumeText = 'resumeText';
       <p class='chbi-about-info'>
         I am a former food scientist turned front end web developer, passionate about solving problems and creating user friendly experiences with code.
       </p>
-      <Counter />
+      <a href='http://github.com/kbongco'><Button /></a>
     </div>
     <div class='chbi-about-current-projects'>
       <h2 class='chbi-about-featured-projects-header'>Featured Projects</h2>
