--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,7 +1,7 @@
 .chbi-button {
   height: 50px;
-  background-color: black;
-  width: 100px;
+  background-color: #1C304A;
+  width: 122px;
   border-radius: 15%;
   color: white;
 }
